apps/greenstar/cluster/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: greenstar-redis-tls-tcp
spec:
  entryPoints: [redis]
  routes:
    - match: HostSNI(`redis.greenstar.${env}.kfirs.com`)
      middlewares:
        - name: ip-whitelist-tcp
          namespace: traefik
      services:
        - name: greenstar-redis
          port: client-tls
  tls:
    passthrough: true
    secretName: greenstar-redis-kfirs-com-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: greenstar-app-tls
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`greenstar.${env}.kfirs.com`) && (PathPrefix(`/auth`) || PathPrefix(`/api`))
      middlewares:
        - name: ip-whitelist
          namespace: traefik
      services:
        - name: greenstar-backend
          port: http
          kind: Service
    - kind: Rule
      match: Host(`greenstar.${env}.kfirs.com`) && !PathPrefix(`/auth`) && !PathPrefix(`/api`)
      middlewares:
        - name: ip-whitelist
          namespace: traefik
      services:
        - name: greenstar-frontend
          port: http
          kind: Service
  tls:
    secretName: greenstar-kfirs-com-tls
